--- a/clashofplanets/game/templates/base.html
+++ b/clashofplanets/game/templates/base.html
@@ -14,6 +14,8 @@
         <link rel="shortcut icon" href="{% static "/img/favicon.ico" %}" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <link href="{% static "css/game.css" %}" rel="stylesheet" type="text/css"/>
+        <link href="{% static "css/ion.rangeSlider.css" %}" rel="stylesheet" type="text/css"/>
+        <link href="{% static "css/ion.rangeSlider.skin.css" %}" rel="stylesheet" type="text/css"/>
 
         <!-- Javascript -->
         <script src="{% static "js/jquery-3.2.1.js" %}"></script>
