--- a/clashofplanets/game/templates/gameroom.html
+++ b/clashofplanets/game/templates/gameroom.html
@@ -45,7 +45,7 @@
         <div class="col">
             <form action="{% url 'game_rooms' %}" method="post">
                 {% csrf_token %}
-                <input type="submit" value="back to lobby">
+                <input type="submit" value="back to lobby" onclick="return confirm('Are you sure?')" />
             </form>
         </div>
     </div>
