CSS/JS/HTML small changes

--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -43,7 +43,7 @@
 
             <div class="row align-items-center">
                 <div class="col">
-                    <p> Population Available: <span id="mypopavailable"></span></p>
+                    <p> Population Available: <span id="mypopAvailable"></span> | Missiles ready to launch: <span id="mymissilesAvailable"></span></p>
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
                 <input type="text" class="js-range-slider" value="" />
             </div>
             <hr class="style1">
-            
+
             <input type="submit" value="Submit New Distribution">
             </form>
         </div>
