--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -34,8 +34,9 @@
         </div>
     </div>
 
-    <div class="row text-center top30">
-        <div class="col metal-effect2">
+    <div class="row top30">
+
+        <div class="col-md-6 metal-effect2 text-center">
             <form action = "" method="post">
             {% csrf_token %}
             <h2 class="custom-h2">My Planet's D.R.P.</h2>
@@ -49,7 +50,7 @@
 
             <div class="row align-items-center extra-controls">
                 <div class="col">
-                    <p>POPULATION</p>
+                    <p class="planet-var-title">POPULATION</p>
                     <img src="{% static "img/pop_var.png" %}" class="img-fluid planet-var" alt="Amount Of population destinated to generate population"  title="Amount Of population destinated to generate population" />
                     <div>
                         <output class="inp js-from">0</output>%
@@ -57,7 +58,7 @@
                 </div>
 
                 <div class="col">
-                    <p>SHIELD</p>
+                    <p class="planet-var-title">SHIELD</p>
                     <img src="{% static "img/shield_var.png" %}" class="img-fluid planet-var" alt="Amount Of population destinated to generate shield" title="Amount Of population destinated to generate shield" />
                     <div>
                         <output class="inp js-middle">0</output>%
@@ -65,7 +66,7 @@
                 </div>
 
                 <div class="col">
-                    <p>MISSILES</p>
+                    <p class="planet-var-title">MISSILES</p>
                     <img src="{% static "img/missile_var.png" %}" class="img-fluid planet-var" alt="Amount Of population destinated to generate missiles" title="Amount Of population destinated to generate missiles" />
                     <div>
                         <span class="highlight"></span>
@@ -83,6 +84,12 @@
 
             <input type="submit" value="Submit New Distribution">
             </form>
+        </div>
+
+        <div class="col-md-5 offset-md-1 metal-effect2 text-center">
+            <h2 class="custom-h2">Battle Log</h2>
+            <hr class="style1">
+            <div id="console-log" style="overflow-y: scroll; height:310px;"></div>
         </div>
     </div>
 
