--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -44,7 +44,7 @@
 
             <div class="row align-items-center">
                 <div class="col">
-                    <p> Population Available: <span id="mypopAvailable"></span> | Missiles ready to launch: <span id="mymissilesAvailable"></span></p>
+                    <p> Population: <span id="mypopAvailable"></span> | Missiles: <span id="mymissilesAvailable"></span></p>
                 </div>
             </div>
 
