--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -5,7 +5,7 @@
 {% block main_content %}
 
 <script src="{% static 'js/ingame.js' %}?v=00003" type="text/javascript"/></script>
-<script src="{% static 'js/ion.rangeSlider.min.js' %}"/></script>
+<script src="{% static 'js/ion.rangeSlider.js' %}"/></script>
 
 
 <div class="container">
@@ -52,7 +52,7 @@
                     <p class="planet-var-title">POPULATION</p>
                     <img src="{% static "img/pop_var.png" %}" class="img-fluid planet-var" alt="Amount Of population destinated to generate population"  title="Amount Of population destinated to generate population" />
                     <div>
-                        <output id="population_range" class="inp js-from">0</output>%
+                        <output id="population_range" class="inp js-from">100</output>%
                     </div>
                 </div>
 
@@ -80,8 +80,6 @@
                 <input type="text" class="js-range-slider" value="" />
             </div>
             <hr class="style1">
-
-            <input id ="btnSubmit" type="button" value="Submit New Distribution">
             </form>
         </div>
 
