CSS-Styles/MaxPlayers-SliderMin/Changes

--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -7,7 +7,6 @@
 <script src="{% static 'js/ingame.js' %}?v=00003" type="text/javascript"/></script>
 <script src="{% static 'js/ion.rangeSlider.js' %}"/></script>
 
-
 <div class="container">
     <div class="row text-center">
         <div class="col">
@@ -86,7 +85,7 @@
         <div class="col-md-5 offset-md-1 metal-effect2">
             <h2 class="custom-h2">Battle Log</h2>
             <hr class="style1">
-            <div id="console-log" style="overflow-y: scroll; height:310px;"></div>
+            <div id="console-log" style="overflow: auto; height: 260px; background-color: #000;"></div>
         </div>
     </div>
 
