Added Attack To Planets Action w/ button part1

--- a/clashofplanets/game/templates/gameroom.html
+++ b/clashofplanets/game/templates/gameroom.html
@@ -8,11 +8,10 @@
 <div class="container">
     <div class="row text-center">
         <div class="col">
-            <h1>Game Room: {{game.room_name}}
+            <h1>
+            Welcome {% if request.user.is_authenticated %}<span class="text-primary" >{{request.user.username}}</span> to {% endif %}
+            Game Room ID:
             <p id="gamenum">{{game.id}}</p>
-            {% if request.user.is_authenticated %}
-                <span class="text-primary" >{{request.user.username}}</span>!
-            {% endif %}
             </h1>
         </div>
     </div>
