--- a/clashofplanets/game/static/css/game.css
+++ b/clashofplanets/game/static/css/game.css
@@ -124,6 +124,12 @@ table th {
     font-family: 'Orbitron', sans-serif;
 }
 
+table tr {
+    line-height: 38px;
+    min-height: 25px;
+    height: 38px;
+}
+
 table td {
     padding: 2px 10px;
     white-space:nowrap;
@@ -173,7 +179,7 @@ input[type="button"] {
     text-transform: uppercase;
     cursor: pointer;
     border: none;
-    margin-bottom: 10px;
+    margin: 0px 0px 0px 0px;
     color: hsla(0,0%,20%,1);
     font-family: 'Orbitron', sans-serif;
     text-shadow: hsla(0,0%,40%,.5) 0 -1px 0, hsla(0,0%,100%,.6) 0 2px 1px;
