CSS/attack changes

--- a/clashofplanets/game/templates/badjoin.html
+++ b/clashofplanets/game/templates/badjoin.html
@@ -8,7 +8,7 @@
 <p><montserratb>TRY TO PROPERLY JOIN/CREATE A GAME THROUGH LOBBY BUTTONS</montserratb></p>
 <form action = "{% url 'home' %}" method="post">
 {% csrf_token %}
-<input type="submit" value="Back to Game Rooms Lobby">
+<input type="submit" value="Back to Game Rooms Lobby" class="metal" >
 </form>
 
 {% endblock %}
