--- a/clashofplanets/game/templates/login.html
+++ b/clashofplanets/game/templates/login.html
@@ -27,7 +27,7 @@
                     {% endif %}
                 {% endfor %}
                 <hr class="style1">
-                <input class="button-primary btn btn-space" type="submit" value="log in">
+                <input class="button-primary btn btn-space metal" type="submit" value="log in">
             </form>
 
         </div>
