--- a/clashofplanets/game/templates/register.html
+++ b/clashofplanets/game/templates/register.html
@@ -19,6 +19,6 @@
         </p>
         {% endfor %}
         <hr>
-        <button type="submit">Sign up</button>
+        <button type="submit" class="metal" >Sign up</button>
     </form>
 {% endblock %}
