--- a/clashofplanets/game/templates/creategame.html
+++ b/clashofplanets/game/templates/creategame.html
@@ -7,6 +7,6 @@
         </table>
         {{form.name_of_field.errors}}
         {{form.non_field_errors}}
-        <input type="submit" class="btn-success" value="Create Game" />
+        <input type="submit" class="btn-success metal" value="Create Game" />
     </form>
 {% endblock %}
