--- a/clashofplanets/game/templates/gameClosed.html
+++ b/clashofplanets/game/templates/gameClosed.html
@@ -9,7 +9,7 @@
 
 <form action = "{% url 'home' %}" method="post">
 {% csrf_token %}
-<input type="submit" value="back to lobby">
+<input type="submit" value="back to lobby" class="metal" >
 </form>
 
 {% endblock %}
