--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -60,7 +60,7 @@
                     </div>
                     {% endfor %}
                     <hr class="style1">
-                    <input type="submit" value="join game" id="join">
+                    <input type="submit" value="join game" id="join" class="metal" >
                 </form>
                 <p id="JoinError" style="color: #ef3245"></p>
             </div>
