--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -44,7 +44,7 @@
                                 <form action="" method="post">
                                     {% csrf_token %}
                                     <input type="hidden" value="{{p.id}}" name="name_of_var">
-                                    <input class="attack-planet" type="submit" value="Attack"/>
+                                    <input class="attack-planet metal" type="submit" value="Attack"/>
                                 </form>
                             {% endif %}
                         </td>
