--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -28,16 +28,21 @@
                 </thead>
                 <tbody id="open"class="openGamesC text-center">
 
+                {% if latest_game_list %}
                     {% for latest_game in latest_game_list %}
                         <tr>
-                            <td class="text-center">{{ latest_game.id}}</th>
+                            <td class="text-center">{{ latest_game.id}}</td>
                             <td class="text-center">{{ latest_game.game_name}}</td>
                             <td class="text-center">{{ latest_game.user}}</td>
                             <td class="text-center">{{ latest_game.connected_players}}</td>
                             <td class="text-center">{{ latest_game.max_players}}</td>
                         </tr>
                    {% endfor %}
-
+                {% else %}
+                    <tr>
+                        <td colspan="5" class="text-center">No available games</td>
+                    </tr>
+                {% endif %}
                 </tbody>
             </table>
         </div>
@@ -130,6 +135,9 @@
         </div>
     </div>
 </div>
-<script src="{% static "/js/main.js" %}" type="text/javascript"/></script>
+
+    {% block page_javascript %}
+        <script src="{% static "/js/main.js" %}" type="text/javascript"></script>
+    {% endblock %}
 
 {% endblock %}
