--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -26,7 +26,7 @@
                         <th class="text-center">Max Players Allowed</th>
                     </tr>
                 </thead>
-                <tbody id="open"class="openGamesC text-center">
+                <tbody id="openGames" class="openGamesC text-center">
 
                 {% if latest_game_list %}
                     {% for latest_game in latest_game_list %}
@@ -136,8 +136,6 @@
     </div>
 </div>
 
-    {% block page_javascript %}
         <script src="{% static "/js/main.js" %}" type="text/javascript"></script>
-    {% endblock %}
 
 {% endblock %}
