Join Bind on rooms

--- a/clashofplanets/game/templates/base.html
+++ b/clashofplanets/game/templates/base.html
@@ -19,6 +19,7 @@
 
         <!-- Javascript -->
         <script src="{% static "js/jquery-3.2.1.js" %}"></script>
+        <script src="{% static "js/crsftoken.js" %}"></script>
 
         <title>{% block title %}Clash Of The Planets{% endblock %}</title>
 
