--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -111,7 +111,13 @@
                             {% if field == game_form.max_players %}
                             <div id="slider">
                                 <span class="highlight"></span>
-                                <output id="rangevalue">2</output>
+                                <output id="rangevalueplayers">2</output>
+                            </div>
+                            {{ field }}
+                            {% elif field == game_form.num_alliances %}
+                            <div id="slider">
+                                <span class="highlight"></span>
+                                <output id="rangevaluealliances">0</output>
                             </div>
                             {{ field }}
                             {% else %}
