p tag por div tag

--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -66,6 +66,7 @@
             <div class="row align-items-center">
                 <div class="col">
                     <p> Population: <span id="mypopAvailable"></span> | Missiles: <span id="mymissilesAvailable"></span></p>
+                    <p id="attackError" style="color: #ef3245"></p>
                 </div>
             </div>
 
