p tag por div tag en salas

--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -93,9 +93,9 @@
                     </div>
                     {% endfor %}
                     <hr class="style1">
-                    <input type="submit" value="join game" id="join" class="metal" >
+                    <input type="submit" value="join game" id="join" class="metal">
                 </form>
-                <p id="JoinError" style="color: #ef3245"></p>
+                <div id="JoinError"></div>
             </div>
         </div>
         <div class="col-md-6 text-center">
