--- a/clashofplanets/game/templates/ingame.html
+++ b/clashofplanets/game/templates/ingame.html
@@ -5,9 +5,7 @@
 {% block main_content %}
 
 <script src="{% static 'js/ingame.js' %}?v=00003" type="text/javascript"/></script>
-<script src="{% static 'js/ion.rangeSlider.js' %}"/></script>
 
-<div class="container">
     <div class="row text-center">
         <div class="col">
             <h1>
@@ -16,7 +14,7 @@
             </h1>
         </div>
     </div>
-    <div class="row text-center top30">
+    <div class="row top30">
         <div class="col table-responsive">
             <table class="table metal-effect2">
                 <thead>
@@ -65,7 +63,7 @@
 
             <div class="row align-items-center">
                 <div class="col">
-                    <p> Population: <span id="mypopAvailable"></span> | Missiles: <span id="mymissilesAvailable"></span></p>
+                    Population: <span id="mypopAvailable" class="population"></span> | Missiles: <span id="mymissilesAvailable" class="missiles"></span>
                     <div id="attackError"></div>
                 </div>
             </div>
@@ -77,6 +75,7 @@
                     <div>
                         <output id="population_range" class="inp js-from">100</output>%
                     </div>
+                    <div id="pop_per_second"></div>
                 </div>
 
                 <div class="col">
@@ -85,6 +84,7 @@
                     <div>
                         <output id="shield_range" class="inp js-middle">0</output>%
                     </div>
+                    <div id="shield_per_second"></div>
                 </div>
 
                 <div class="col">
@@ -94,6 +94,7 @@
                         <span class="highlight"></span>
                         <output id="missiles_range" class="inp js-to">0</output>%
                     </div>
+                    <div id="missiles_per_second"></div>
                 </div>
 
             </div>
@@ -121,7 +122,5 @@
             </form>
         </div>
     </div>
-</div>
-
 
 {% endblock %}
