--- a/clashofplanets/game/templates/base.html
+++ b/clashofplanets/game/templates/base.html
@@ -14,12 +14,15 @@
         <link rel="shortcut icon" href="{% static "/img/favicon.ico" %}" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
         <link href="{% static "css/game.css" %}" rel="stylesheet" type="text/css"/>
+        <link href="{% static "css/rocket.css" %}" rel="stylesheet" type="text/css"/>
         <link href="{% static "css/ion.rangeSlider.css" %}" rel="stylesheet" type="text/css"/>
         <link href="{% static "css/ion.rangeSlider.skin.css" %}" rel="stylesheet" type="text/css"/>
 
         <!-- Javascript -->
         <script src="{% static "js/jquery-3.2.1.js" %}"></script>
+        <script src="{% static "js/rocket.js" %}"></script>
         <script src="{% static "js/crsftoken.js" %}"></script>
+        <script src="{% static "js/ion.rangeSlider.js" %}"/></script>
 
         <title>{% block title %}Clash Of The Planets{% endblock %}</title>
 
@@ -46,10 +49,12 @@
                 </ul>
             </div>
         </nav>
-        <div class="container" style="margin-bottom:50px;">
+
+        <div class="container">
             {% block main_content %}
             {% endblock %}
         </div>
+
         <footer class="footer fixed-bottom metal-effect">
             <div class="container">
                 <span>Synergia 2017. Todos los derechos reservados.</span>
