--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -4,18 +4,15 @@
 
 {% block main_content %}
 
-<div class="container">
     <div class="row">
         <div class="col-lg-12 col-md-12 text-center">
             <h2 class="custom-h2">List of Open Game Rooms</h2>
         </div>
     </div>
-</div>
-<br>
+    <br>
 
-<div class="container">
-    <div class="row" id="games">
-        <div class="col table-responsive text-center">
+    <div class="row">
+        <div class="col table-responsive">
             <table class="table metal-effect2">
                 <thead>
                     <tr>
@@ -27,7 +24,6 @@
                     </tr>
                 </thead>
                 <tbody id="openGames" class="openGamesC text-center">
-
                 {% if latest_game_list %}
                     {% for latest_game in latest_game_list %}
                         <tr>
@@ -146,7 +142,6 @@
             </div>
         </div>
     </div>
-</div>
 
         <script src="{% static "/js/main.js" %}" type="text/javascript"></script>
 
