--- a/clashofplanets/game/static/css/game.css
+++ b/clashofplanets/game/static/css/game.css
@@ -31,6 +31,10 @@ hr.style1{
     text-transform: uppercase;
 }
 
+.container {
+    max-width: 1920px;
+}
+
 .bg-inverse {
     background-color: #212529!important;
     font-family: 'Roboto', sans-serif;
@@ -62,6 +66,7 @@ ul.openGamesC{
 
 #JoinError, #attackError{
     color: #ef3245;
+    padding-bottom: 5px;
 }
 
 .cardb h1{
@@ -117,12 +122,12 @@ ul.openGamesC{
 }
 
 table {
-    width:100%;
+    width: 100%;
     font-weight: 400;
 }
 
 table th {
-    padding: 10px;
+    padding: 5px;
     font-weight: 400;
     text-transform: uppercase;
     font-family: 'Orbitron', sans-serif;
@@ -135,7 +140,7 @@ table tr {
 }
 
 table td {
-    padding: 2px 10px;
+    padding: 2px 5px;
     white-space:nowrap;
 }
 
