fix allianzas/joingame on creategame/templates/js

--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -19,6 +19,7 @@
                         <th class="text-center">Game ID</th>
                         <th class="text-center">Game Room Name</th>
                         <th class="text-center">Game Room Owner</th>
+                        <th class="text-center">Number Of Alliances</th>
                         <th class="text-center">Players Connected</th>
                         <th class="text-center">Max Players Allowed</th>
                     </tr>
@@ -30,6 +31,7 @@
                             <td class="text-center">{{latest_game.id}}</td>
                             <td class="text-center">{{latest_game.game_name}}</td>
                             <td class="text-center">{{latest_game.user}}</td>
+                            <td class="text-center">{{latest_game.num_alliances}}</td>
                             <td class="text-center">{{latest_game.connected_players}}</td>
                             <td class="text-center">{{latest_game.max_players}}</td>
                         </tr>
