--- a/clashofplanets/game/templates/gameroom.html
+++ b/clashofplanets/game/templates/gameroom.html
@@ -29,6 +29,7 @@
                         <th class="text-center">Planet ID</th>
                         <th class="text-center">Planet Name</th>
                         <th class="text-center">Planet Owner</th>
+                        <th class="text-center">Planet Alliance</th>
                     </tr>
                 </thead>
                 <tbody id="playerList" class="text-center">
