--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -4,6 +4,8 @@
 
 {% block main_content %}
 
+    <script src="{% static "/js/main.js" %}" type="text/javascript"></script>
+
     <div class="row">
         <div class="col-lg-12 col-md-12 text-center">
             <h2 class="custom-h2">List of Open Game Rooms</h2>
@@ -100,30 +102,24 @@
             <div class="cardr">
                 <h2 class="custom-h2">Create Game</h2>
                 <hr class="style1">
-                <form method="post" onsubmit="myButton.disabled=true; return true;">
+                <form method="post">
                     {% csrf_token %}
                     {% for field in game_form %}
                         <div class="row top30">
                             <div class="col">
                             {{ field.label_tag }}
                             {% if field == game_form.max_players %}
-                            <div id="slider">
-                                <span class="highlight"></span>
-                                <output id="rangevalueplayers">2</output>
-                            </div>
-                            {{ field }}
+                                <div class="range-slider-players">
+                                 {{field}}
+                                </div>
                             {% elif field == game_form.num_alliances %}
-                            <div id="slider">
-                                <span class="highlight"></span>
-                                <output id="rangevaluealliances">0</output>
-                            </div>
-                            {{ field }}
+                                <div class="range-slider-alliances">
+                                 {{field}}
+                                </div>
                             {% elif field == game_form.bot_players %}
-                            <div id="slider">
-                                <span class="highlight"></span>
-                                <output id="rangevaluebot">0</output>
-                            </div>
-                            {{ field }}
+                                <div class="range-slider-bots">
+                                 {{field}}
+                                </div>
                             {% else %}
                                 {{ field }}
                             {% endif %}
@@ -145,6 +141,5 @@
         </div>
     </div>
 
-        <script src="{% static "/js/main.js" %}" type="text/javascript"></script>
 
 {% endblock %}
