--- a/clashofplanets/game/static/css/game.css
+++ b/clashofplanets/game/static/css/game.css
@@ -497,3 +497,7 @@ input[type=range]::-moz-range-progress {
   -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
   transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
 }
+.missilesStatus {
+    color: black;
+    padding: 3px;
+}
