--- a/clashofplanets/game/templates/base.html
+++ b/clashofplanets/game/templates/base.html
@@ -31,21 +31,26 @@
 
     </head>
     <body id="bg" style="background-image: url('{% static "img/bg-image.jpg"%}')";>
-        <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top metal-effect">
+        <nav class="navbar navbar-toggleable-md fixed-top metal-effect">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsCollapse" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand" href="/">Clash Of The Planets</a>
             <div class="collapse navbar-collapse" id="navbarsCollapse">
-                <ul class="navbar-nav mr-auto">
+                <ul class="nav navbar-nav ml-auto">
                     {% if request.user.is_authenticated %}
+                        <li>Welcome, {{request.user.username}}</li>
                         <li><a href="/logout/">Logout</a></li>
-                        <li><a href="/game_rooms/">Game Rooms Lobby</a>
                     {% else %}
                         <li><a href="/login/">Login</a></li>
                         <li><a href="/signup/">Register</a></li>
                     {% endif %}
-                        <li><a href="/game_instructions/">Game instructions</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="/game_instructions/">Game instructions</a></li>
+                    {% if request.user.is_authenticated %}
+                        <li><a href="/game_rooms/">Game Rooms Lobby</a>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
