--- a/clashofplanets/game/templates/game_rooms.html
+++ b/clashofplanets/game/templates/game_rooms.html
@@ -30,7 +30,7 @@
                 {% if latest_game_list %}
                     {% for latest_game in latest_game_list %}
                         <tr>
-                            <td class="text-center">{{latest_game.id}}</td>
+                            <td class="text-center neon-effect">{{latest_game.id}}</td>
                             <td class="text-center">{{latest_game.game_name}}</td>
                             <td class="text-center">{{latest_game.user}}</td>
                             <td class="text-center">{{latest_game.num_alliances}}</td>
