--- a/clashofplanets/game/templates/login.html
+++ b/clashofplanets/game/templates/login.html
@@ -4,9 +4,6 @@
         <div class="col-lg-12 col-md-12 text-center cardb">
             <h2 class="top15">Login</h2>
             <hr class="style1">
-            {% if form.errors %}
-            <p class="text-danger">Your username and password didn't match. Please try again.</p>
-            {% endif %}
             <form method="post">
                 {% csrf_token %}
                 {% for field in form %}
@@ -14,9 +11,9 @@
                         <div class="control-group error">
                             <label class="control-label">{{ field.label }}</label>
                             <div class="controls">{{ field }}
-                    <span class="help-inline text-danger">
-                        {% for error in  field.errors %}{{ error }}{% endfor %}
-                    </span>
+                                <span class="help-inline text-danger">
+                                    {% for error in  field.errors %}{{ error }}{% endfor %}
+                                </span>
                             </div>
                         </div>
                     {% else %}
@@ -27,6 +24,9 @@
                     {% endif %}
                 {% endfor %}
                 <hr class="style1">
+                {% if form.errors %}
+                    <p class="text-danger top7">Your username and password didn't match. Please try again.</p>
+                {% endif %}
                 <input class="button-primary btn btn-space metal" type="submit" value="log in">
             </form>
 
